# MOSEF-Bank-Churn-Prediction-VAZELLE-TAVERDIAN

./: README.md  pyproject.toml
src/: Projet_Kaggle.ipynb  Projet_Kaggle_Mariam.ipynb  Projet_Kaggle_TARVERDIAN_VAZELLE.ipynb  Projet_Kaggle_brouillon.ipynb  code brouillon lucas.ipynb  code.ipynb  historique scores  test_predictions.csv  test_pycaret.ipynb  test_traitement.csv  train_traintement.csv  train_traitement.csv
src/output/: historique_des_scores.txt  test_predictions.csv  test_traitement.csv
