[tool.poetry]
name = "mosef bank churn prediction"
version = "0.1.0"
description = "MOSEF Bank Churn Prediction"
authors = ["MariamTaverdian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
