[tool.poetry]
name = "mosef-bank-churn-prediction-vazelle-teverdian"
version = "0.1.0"
description = ""
authors = ["Lucasvazelle <lucasvazelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
numpy = "^2.1.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
